syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "task.proto";
import "error.proto";

message TaskLifecycleResponse {
  Error error = 1;
}

message DesireTaskRequest {
  TaskDefinition task_definition = 1 [(gogoproto.jsontag) = "task_definition"];
  string task_guid = 2;
  string domain = 3;
}

message StartTaskRequest {
  string task_guid = 1;
  string cell_id = 2;
}

message StartTaskResponse {
  Error error = 1;
  bool should_start = 2;
}

message FailTaskRequest {
  option deprecated = true;
  string task_guid = 1;
  string failure_reason = 2;
}

message RejectTaskRequest {
  string task_guid = 1;
  string rejection_reason = 2;
}

message TaskGuidRequest {
  string task_guid = 1;
}

message CompleteTaskRequest {
  string task_guid = 1;
  string cell_id = 2;
  bool failed = 3;
  string failure_reason = 4;
  string result = 5;
}

message TaskCallbackResponse {
  string task_guid = 1;
  bool failed = 2;
  string failure_reason = 3;
  string result = 4;
  string annotation = 5 [(gogoproto.jsontag) = "annotation,omitempty"];
  int64 created_at = 6;
}

message TasksRequest{
  string domain = 1;
  string cell_id = 2;
}

message TasksResponse{
  Error error = 1;
  repeated Task tasks = 2;
}

message TaskByGuidRequest{
  string task_guid = 1;
}

message TaskResponse{
  Error error = 1;
  Task task = 2;
}
